# plan-my-vacation

./: .gitignore  README.md  package-lock.json  package.json  requirements.txt  start.sh
backend/: pyproject.toml  run.py
backend/app/: api.py  app.py  limiter.py
src/: App.css  App.js
src/components/: about.js  examplePlan.js  planVacation.js  tooltipStyle.js  vacationPlanResult.js  vacationPlanResults.js  welcomePage.js
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: App.css  App.js
ui/src/components/: about.js  api.js  footer.js  navBar.js  pdf.js  planVacation.js  tooltip.js  tooltipStyle.js  tooltipText.js  utils.js  vacationPlanResult.js  vacationPlanResults.js  welcomePage.js
