[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ben Southcott <benjamin.southcott@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.3"
Flask-Cors = "^4.0.0"
Flask-RESTful = "^0.3.10"
openai = "^0.27.9"
flask-limiter = "^3.5.0"
dnspython = "^2.4.2"
gunicorn = "^21.2.0"
pymongo = "^4.5.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
